<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AtividadeAtendimentoMesa" >

    <ProgressBar
        android:id="@+id/progressAtendimentoMesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:text="@string/label_numero_mesa" />

        <EditText
            android:id="@+id/edittextNumeroMesa"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <Button
            android:id="@+id/buttonNumeroMesa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botao_numero_mesa" />
    </LinearLayout>

    <TextView
        android:text="@string/label_listagem_pedidos"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    </ListView>

    <TextView
        android:id="@android:id/empty"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/listagem_pedidos_vazia" />

</LinearLayout>