<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ProgressBar
            android:id="@+id/progressOperacaoPedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:text="@string/label_pedido_mesa" />

            <EditText
                android:id="@+id/edittextPedidoMesa"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:text="@string/label_pedido_item" />

            <Spinner
                android:id="@+id/spinnerPedidoItem"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:text="@string/label_pedido_descricao_item" />

            <EditText
                android:id="@+id/edittextPedidoDescricaoItem"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:text="@string/label_pedido_rendimento" />

            <EditText
                android:id="@+id/edittextPedidoRendimento"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:text="@string/label_pedido_preco" />

            <EditText
                android:id="@+id/edittextPedidoPreco"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:text="@string/label_pedido_quantidade" />

            <EditText
                android:id="@+id/edittextPedidoQuantidade"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonPedidoSalvar"
            android:text="@string/botao_pedido_salvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>